make sure hotel pool is visible

--- a/raw/scss/_index.scss
+++ b/raw/scss/_index.scss
@@ -1,6 +1,7 @@
 .campaign {
   .splash {
     background-image: url('../bg/raffle.jpg');
+    background-position-y: -70px; // to make sure hotel pool is visible
   }
 
   @include media($mobile) {
